# project-orchestrator

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CICD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_STATUS.md  DEPLOY_README.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION-PLAN-FIX-WEBUI.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ISSUE_28.md  ISSUE-26-IMPLEMENTATION-SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PRODUCTION_HARDENING_COMPLETE.md  PRODUCTION_SETUP.md  RCA-CI-CD-FAILURES.md  RCA-CI-CD-LOCAL-REMOTE-DIVERGENCE.md  RCA-DEPLOYMENT-FAILURE-ISSUE-16.md  RCA-WEBUI-ISSUE-13.md  README.md  VALIDATION_REPORT.md  WEBUI_COMPLETE_FIX_PLAN.md  WEBUI_DEPLOYMENT.md  alembic.ini  deploy-manual.sh  deploy.sh  docker-compose.prod.yml  docker-compose.prod.yml.backup  docker-compose.yml  docker-compose.yml.backup  pyproject.toml  setup-github-runner.sh  test_deployment.sh  (+2 more)
.agents/: README.md
.agents/commands/: production-checklist.md
.agents/plans/: cicd-implementation-plan.md  cicd-summary.md  enhance-sse-detailed-output.md  fix-sse-activity-feed.md  fix-sse-feed-complete-root-cause.md  fix-sse-feed-end-to-end.md  production-hardening-issue-28.md  project-orchestrator-plan.md  real-scar-integration.md  rename-po-to-pm.plan.md  sse-detailed-execution-output.md  sse-detailed-scar-activities.md  sse-feed-complete-diagnostic-fix.md  sse-feed-root-cause-fix.md  webui-project-organizer.md  webui-project-organizer.plan.md  webui-ux-enhancements-issue-33.plan.md  webui-ux-enhancements.md
.agents/progress/: FINAL-PROJECT-SUMMARY.md  cicd-implementation-complete.md  phase-1-5-summary.md  phase-6-summary.md  phases-7-8-roadmap.md
.agents/rca-reports/: rca-report-1.md
.agents/reference/: scar-workflow-guide.md
.agents/system-reviews/: project-orchestrator-review.md
.agents/visions/: project-orchestrator.md
.archon/plans/: issue-17-preload-scar-data.md
.claude/: settings.json
.github/workflows/: README.md  build-and-push.yml  cd.yml  ci.yml  deploy.yml  docker-build.yml
.scar/: projects.json  projects.json.example
docs/: CICD_QUICKSTART.md  CICD_SETUP.md  DATABASE_SETUP.md  DEPLOYMENT.md  DOCKER_MANAGEMENT.md  OPERATIONS.md  QUICK_START.md  TESTING_GUIDE.md  WEBHOOK_SETUP.md
docs/orchestrator-agent-guide/: 00-overview.md  01-command-reference.md  02-workflow-patterns.md  03-decision-tree.md  04-subagent-patterns.md  05-advanced-techniques.md  DOCUMENTATION_COMPLETE.md  README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
scripts/: deploy.sh  init_db.py
src/: bot_main.py  config.py  main.py
src/agent/: orchestrator_agent.py  prompts.py  tools.py
src/api/: documents.py  github_issues.py  health.py  projects.py  sse.py  websocket.py
src/database/: connection.py  models.py
src/integrations/: __init__.py  docker_commands.py  github_client.py  (+2 more)
tests/: conftest.py  test_main.py
(+66 files in other folders)
